--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,18 @@ mybatis.configuration.mapUnderscoreToCamelCase=true
 # logger
 #logging.level.com.godot.community=debug
 #logging.file.name=d:/work/JAVA/data/community/log.log
+
+# MailProperties
+spring.mail.host=smtp.126.com
+#####spring.mail.port=465
+#####spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
+spring.mail.username=godot42@126.com
+spring.mail.password=SHGPQHUAEMUIIEOC
+#####spring.mail.protocol=smtps
+#####spring.mail.properties.mail.smtp.ssl.enable=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.starttls.enable=ture
+spring.mail.properties.mail.starttls.required=true
+
+# Community
+community.path.domain=http://localhost:8080
