--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,3 +39,9 @@ spring.mail.properties.mail.starttls.required=true
 
 # Community
 community.path.domain=http://localhost:8080
+community.path.upload=D:/work/JAVA/data/upload
+
+# RedisProperties
+spring.redis.database=11
+spring.redis.host=localhost
+spring.redis.port=6379
