update user name

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -55,3 +55,35 @@ spring.kafka.consumer.auto-commit-interval=3000
 # ElasticsearchProperties
 #spring.data.elasticsearch.cluster-name=godot-community
 #spring.data.elasticsearch.cluster-nodes=127.0.0.1:9300
+
+# TaskExecutionProperties
+spring.task.execution.pool.core-size=5
+spring.task.execution.pool.max-size=15
+spring.task.execution.pool.queue-capacity=100
+
+# TaskSchedulingProperties
+spring.task.scheduling,pool.size=5
+
+# QuartzProperties
+spring.quartz.job-store-type=jdbc
+spring.quartz.scheduler-name=communityScheduler
+spring.quartz.properties.org.quartz.scheduler.instanceId=AUTO
+#spring.quartz.properties.org.quartz.jobStore.class=org.quartz.impl.jdbcjobstore.JobStoreTX // Before version 2.5.7
+spring.quartz.properties.org.quartz.jobStore.class=org.springframework.scheduling.quartz.LocalDataSourceJobStore
+spring.quartz.properties.org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.StdJDBCDelegate
+spring.quartz.properties.org.quartz.jobStore.isClustered=true
+spring.quartz.properties.org.quartz..threadPool.class=org.quartz.simpl.SimpleThreadPool
+spring.quartz.properties.org.quartz.threadPool.threadCount=5
+
+
+# WK html to x
+wk.image.command=d:/work/JAVA/data/wkhtmltox/bin/wkhtmltoimage.exe
+wk.image.storage=D:/work/JAVA/data/wkhtmltox/wk-images/
+
+# Qiniu Cloud
+qiniu.key.access=ujf31z4BmQAjDniMWtd_GPE_y3vDvlQIr259VOUt
+qiniu.key.secret=aPVif8V_vrgF-kur66TyBjqdXdOD0oT0hl3dkaQo
+qiniu.bucket.header.name=godot-community-test-header
+qiniu.bucket.header.url=rg6w7qy3i.hn-bkt.clouddn.com
+qiniu.bucket.share.name=godot-community-test-share
+qiniu.bucket.share.url=rg7jcdl9y.hn-bkt.clouddn.com
